P=Changes done orange to pink

--- a/barex.html
+++ b/barex.html
@@ -60,7 +60,7 @@ c<!DOCTYPE html>
           <button class="primary-btn">Start Your Trail Now</button>
 
           <p>
-            Orange Music is available in myTunes, and for iOS and Android
+            PINK Music is available in myTunes, and for iOS and Android
             devices.
           </p>
           <div class="ipad-iphone-img">
