--- a/barex.html
+++ b/barex.html
@@ -72,7 +72,7 @@ c<!DOCTYPE html>
         <h3>The movie and TV collection you always wished for. Granted.</h3>
         <p>
           With over 100,000 movies and TV shows to choose from, there’s always
-          something great to watch on myTunes and if you watch on Orange TV 4K,
+          something great to watch on my iTunes and if you watch on Orange TV 4K,
           you’ll be able to enjoy a tremendous selection of your favorite
           content in 4K HDR. So get ready to enjoy episodes of your favorite TV
           shows or hit movies you’ve been waiting to see — anytime, anywhere.
